adding border to items presenter

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Menu/Menu.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Menu/Menu.xaml
@@ -8,14 +8,18 @@
         <Setter Property="ItemsPanel">
             <Setter.Value>
                 <ItemsPanelTemplate>
-                    <wrapPanel:WrapPanel Background="{TemplateBinding Background}" />
+                    <wrapPanel:WrapPanel />
                 </ItemsPanelTemplate>
             </Setter.Value>
         </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:Menu">
-                    <ItemsPresenter />
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ItemsPresenter />
+                    </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
