--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -4,15 +4,15 @@
       xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
       xmlns:controlsLocal="using:Microsoft.Toolkit.Uwp.SampleApp.Controls"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:developerTools="using:Microsoft.Toolkit.Uwp.DeveloperTools"
       xmlns:extensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
+      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      extensions:StatusBar.IsVisible="False"
       extensions:TitleBar.BackgroundColor="{StaticResource Grey-01}"
       extensions:TitleBar.ButtonBackgroundColor="{StaticResource Grey-03}"
       extensions:TitleBar.ButtonForegroundColor="{StaticResource Grey-04}"
       extensions:TitleBar.ForegroundColor="{StaticResource Grey-04}"
-      extensions:StatusBar.IsVisible="False"
       Loaded="Shell_OnLoaded"
       SizeChanged="Page_SizeChanged"
       mc:Ignorable="d">
@@ -95,9 +95,11 @@
                                Text="Sample App" />
                 </StackPanel>
                 <Frame x:Name="NavigationFrame" />
-                <!--Uncomment this control to help you determine where the focus is.
-                This could be useful when validating accessibility of your control-->
-                <!--<developerTools:FocusTracker VerticalAlignment="Bottom" 
+                <!--
+                    Uncomment this control to help you determine where the focus is.
+                    This could be useful when validating accessibility of your control
+                -->
+                <!--<developerTools:FocusTracker VerticalAlignment="Bottom"
                                              HorizontalAlignment="Center"
                                              IsRunning="True"/>-->
             </Grid>
