-Created Initial TextToolbar. -Created basic Sample Page.
-Current Issues:
  *Can’t seem to register Commands into the Shell for sample page.

  *Code formatting hasn’t been implemented properly yet, inlines don’t seem to be to spec for MarkDownTextBlock? Code blocks hasn’t been implemented either.

  *Setting a List from a selection that starts in the middle of a line confuses the SetList Function, and places the LineChar at the end of the first line.

  *Different Formatting types would likely want different Default Buttons, perhaps a way to Replace all Default Buttons in XAML without requiring a complete restyle?

  *RichTextFormatter is unimplemented.

  *If you remove a Default Button, you can’t add it back.

  *There is currently a dependency on the FontAwesome Font, as MDL2 has not NumberedList Icon.

  *Replacing the Default Labels for translation is a bit daunting, is there a better way?

  *Would it be helpful if the SetSelect and SetList functions were moved out of MarkDownFormatter for use in other formatters?

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Themes/Generic.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Themes/Generic.xaml
@@ -6,6 +6,7 @@
         <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/SlidableListItem/SlidableListItem.xaml" />
         <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/ImageEx/ImageEx.xaml" />
         <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/ImageEx/RoundImageEx.xaml" />
+        <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/TextToolbar.xaml"/>
         <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/HeaderedTextBlock/HeaderedTextBlock.xaml" />
         <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/RadialGauge/RadialGauge.xaml" />
         <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/PullToRefreshListView/PullToRefreshListView.xaml" />
