fix(Expander): set Background to the entire control

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
@@ -326,6 +326,8 @@
                                           AutomationProperties.Name="Expand"
                                           Style="{StaticResource HeaderToggleButtonStyle}" 
                                           VerticalAlignment="Top" HorizontalAlignment="Stretch"
+                                          Foreground="{TemplateBinding Foreground}"
+                                          Background="{TemplateBinding Background}"
                                           ContentTemplate="{TemplateBinding HeaderTemplate}" Content="{TemplateBinding Header}"
                                           IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" />
                             
