--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
@@ -12,8 +12,10 @@
             <controls:Expander x:Name="Expander1" VerticalAlignment="Top" Margin="0,0,0,10" 
                                Header="This is the header - expander 1"
                                HorizontalContentAlignment="Stretch"
+                               Foreground="White"
+                               Background="{Binding Path=BackgroundExpander1.Value, Mode=TwoWay}"
                                IsExpanded="{Binding Path=IsExpanded1.Value, Mode=TwoWay}">
-                <Grid Height="250" Background="{StaticResource Brush-Grey-01}">
+                <Grid Height="250">
                     <TextBlock HorizontalAlignment="Center" 
                                TextWrapping="Wrap" 
                                Text="This is the content"
@@ -25,8 +27,10 @@
             <controls:Expander x:Name="Expander2" VerticalAlignment="Top" Margin="0" 
                                Header="This is the header - expander 2"
                                HorizontalContentAlignment="Stretch"
+                               Foreground="White"
+                               Background="{Binding Path=BackgroundExpander2.Value, Mode=TwoWay}"
                                IsExpanded="{Binding Path=IsExpanded2.Value, Mode=TwoWay}">
-                <Grid Height="250" Background="{StaticResource Brush-Grey-02}">
+                <Grid Height="250">
                     <TextBlock HorizontalAlignment="Center" 
                                TextWrapping="Wrap" 
                                Text="This is the content" 
