--- a/Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/TextToolbar.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/TextToolbar.xaml
@@ -5,6 +5,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/ToolbarItems/ToolbarButton.xaml" />
         <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/ToolbarItems/ToolbarSeparator.xaml" />
+        <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/Symbols/Symbols.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="local:TextToolbar">
