adding quick access alt button on menu item

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuPage.xaml
@@ -279,7 +279,8 @@
 
         <controls:Menu MenuFlyoutStyle="{StaticResource MenuStyle}"
                        Orientation="Horizontal">
-            <controls:MenuItem Header="File">
+            <controls:MenuItem controls:Menu.InputGestureText="Alt+F"
+                               Header="File">
                 <MenuFlyoutSubItem Text="New">
                     <MenuFlyoutItem controls:Menu.InputGestureText="Ctrl+Shift+N"
                                     Command="{StaticResource NewProject}"
