adding input gesture text to header item

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuPage.xaml
@@ -279,7 +279,7 @@
 
         <controls:Menu MenuFlyoutStyle="{StaticResource MenuStyle}"
                        Orientation="Horizontal">
-            <controls:MenuItem controls:Menu.InputGestureText="Alt+F"
+            <controls:MenuItem controls:Menu.InputGestureText="Shift+F"
                                Header="File">
                 <MenuFlyoutSubItem Text="New">
                     <MenuFlyoutItem controls:Menu.InputGestureText="Ctrl+Shift+N"
