-Custom TextToolbar Symbols now react to IsEnabled with a Gray ViewState.
-Added Back IsEnabled Property to Sample Page.

-Added DependencyPropertyWatcher, to track changes in Dependency Properties.

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextToolbar/TextToolbarPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextToolbar/TextToolbarPage.xaml
@@ -18,6 +18,7 @@
                                Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <controls:TextToolbar x:Name="Toolbar"
                                 Editor="{x:Bind EditZone}"
+                                IsEnabled="{Binding IsEnabled.Value, Mode=TwoWay}"
                                 Format="{Binding Format.Value, Mode=TwoWay}"
                                 Background="#4C4F4F4F" />
 
