-Switching between List and OrderedList will disable the toggle on the previous button.
-Hopefully fixed the Threading Exception for disposal of DependencyWatcher in the Symbol deconstructor.

-Disabled Tab Stops around the place. The Toolbar is now more Keyboard/Controller friendly, requiring no confusing middle tabs.

-Tooltip now fills out the Automation.Name field.

-Separators shouldn't steal focus anymore.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/Symbols/Symbols.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/Symbols/Symbols.xaml
@@ -31,6 +31,7 @@
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
+        <Setter Property="IsTabStop" Value="False" />
 
         <Setter Property="Template">
             <Setter.Value>
@@ -79,6 +80,7 @@
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
+        <Setter Property="IsTabStop" Value="False" />
 
         <Setter Property="Template">
             <Setter.Value>
